# AuditTrail

./: AuditTrail.xsd  CMakeLists.txt  DICOMAuditMessageSchema.xsd  DICOMInstanceTransferredSample.txt  README.md  _clang-format  conanfile.txt
src/: CMakeLists.txt
src/AuditTrail/: ActiveParticipant.cpp  ActiveParticipant.h  ApplicationActivity.cpp  ApplicationActivity.h  AuditLogUsed.cpp  AuditLogUsed.h  BeginTransferringInstances.cpp  BeginTransferringInstances.h  CMakeLists.txt  CodedValueType.cpp  CodedValueType.h  DataExport.cpp  DataExport.h  DataImport.cpp  DataImport.h  Entity.h  EntityActiveParticipant.cpp  EntityActiveParticipant.h  EntityEvent.cpp  EntityEvent.h  EntityParticipantObject.cpp  EntityParticipantObject.h  Event.h  InstancesAccessed.cpp  InstancesAccessed.h  InstancesTransferred.cpp  InstancesTransferred.h  Media.h  Message.h  NetworkEntry.cpp  NetworkEntry.h  Node.h  Query.cpp  Query.h  SOPClass.h  SecurityAlert.cpp  SecurityAlert.h  StudyDeleted.cpp  StudyDeleted.h  UserAuthentication.cpp  (+4 more)
src/Common/: CMakeLists.txt  DebugNew.h  Log.h  LogEasylogging.cpp  LogEasylogging.h  STLUtils.cpp  STLUtils.h
test/unit/: ApplicationActivityTests.cpp  AuditLogUsedTests.cpp  BeginTransferringInstancesTests.cpp  CMakeLists.txt  CodedValueTypeTests.cpp  CodedValueTypeTests.h  DataExportTests.cpp  DataImportTests.cpp  InstancesAccessedTests.cpp  InstancesTransferredTests.cpp  LogNoop.h  NetworkEntryTests.cpp  QueryTests.cpp  SecurityAlertTests.cpp  StudyDeletedTests.cpp  TestData.h  Tests.cpp  UserAuthenticationTests.cpp  WriterMock.h  main.cpp
